force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <nameField>
        <displayFormat>LN-{0000}</displayFormat>
        <label>Loan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan&apos;s</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>