force-app/main/default/objects/Loan__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Branch</fullName>
            </value>
            <value>
                <fullName>City Branch</fullName>
            </value>
            <value>
                <fullName>North Branch</fullName>
            </value>
            <value>
                <fullName>South Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>