force-app/main/default/objects/Loan__c/fields/Customer_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Loan&apos;s</relationshipLabel>
    <relationshipName>Loan_s</relationshipName>
    <type>Lookup</type>
</CustomField>