force-app/main/default/objects/Loan__c/fields/EMI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMI_Amount__c</fullName>
    <formula>IF(
    Interest_Rate__c = 0,
    Loan_Amount__c / Tenure__c,
    (
        Loan_Amount__c *
        (Interest_Rate__c / 12) *
        EXP(
            Tenure__c *
            LN(1 + (Interest_Rate__c / 12))
        )
    )
    /
    (
        EXP(
            Tenure__c *
            LN(1 + (Interest_Rate__c / 12))
        ) - 1
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMI_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>