force-app/main/default/objects/Loan__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Loan&apos;s</relationshipLabel>
    <relationshipName>Loan_s</relationshipName>
    <type>Lookup</type>
</CustomField>