force-app/main/default/objects/Loan__c/fields/Next_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_EMI_Date__c</fullName>
    <formula>ADDMONTHS(Start_Date__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next EMI Date</label>
    <type>Date</type>
</CustomField>