force-app/main/default/objects/Loan__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <inlineHelpText>in months values like (3,6,9,12,18,24)</inlineHelpText>
    <label>Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>