force-app/main/default/objects/Loan__c/fields/Total_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Amount__c</fullName>
    <formula>EMI_Amount__c * Tenure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>